--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha test.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon src/index.js"
   },
   "repository": {
     "type": "git",
@@ -22,7 +22,8 @@
   "homepage": "https://github.com/ISIS2503/ISIS2503-201910-S2-ISIS_CONSULTING#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
-    "express": "^4.17.0"
+    "express": "^4.17.0",
+    "mongodb": "^3.2.5"
   },
   "devDependencies": {
     "nodemon": "^1.19.0"
